sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:4: error: not found: value j
  j=a-2
  ^AlgBubbleSort2:5: error: not found: value j
  while(j>=0){
        ^AlgBubbleSort2:6: error: not found: value j
      for (i<-0 to j){
                   ^AlgBubbleSort2:11: error: not found: value j
    j=j-1
    ^